--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 <body>
     <h1>Some text</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias aliquid aut deleniti dignissimos ea est
+        excepturi labore laborum libero neque porro, possimus quidem, quod sequi ut veniam vitae voluptas voluptatibus.
+    </p>
     <script src="js.js"></script>
 </body>
 </html>
