index.js conflict resolved

--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Some text</h1>
-    <script src="js.js"></script>
+<h1>Some text</h1>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias aliquid aut deleniti dignissimos ea est
+    excepturi labore laborum libero neque porro, possimus quidem, quod sequi ut veniam vitae voluptas voluptatibus.
+</p>
+<p>
+    Alias aliquid aut deleniti dignissimos ea estexcepturi labore laborum libero neque porro, possimus quidem,
+    quod sequi .
+</p>
+<script src="js.js"></script>
 </body>
 </html>
